Fail with structured validation message when simulating